# C-plus-plus

./: AddToSet.cpp  AddToSet.h  AllOf.cpp  AllOf.h  App.cpp  App.h  Buffer.h  CMakeLists.txt  CheckIfIn.cpp  CheckIfIn.h  CompNumber.cpp  CompNumber.h  Delete.cpp  Delete.h  Ellipse.cpp  Ellipse.h  FIFO.cpp  FIFO.h  FindBackward.cpp  FindBackward.h  FindMin.cpp  FindMin.h  IntersectionOfTwo.cpp  IntersectionOfTwo.h  IsPartitioned.cpp  IsPartitioned.h  Matrix.cpp  Matrix.h  MatrixTranspone.cpp  MatrixTranspone.h  Parallelogram.cpp  Parallelogram.h  Queue.cpp  Queue.h  RoundFloat.cpp  RoundFloat.h  SetOfNumbers.cpp  SetOfNumbers.h  Shape.h  Start.h  (+6 more)
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp
ConsoleApplication1/ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc143.idb
ConsoleApplication1/ConsoleApplication1/x64/Debug/ConsoleA.16d9854f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  ConsoleApplication1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleApplication1/x64/Debug/: output.xml  test.txt
