cmake_minimum_required(VERSION 3.26)
project(lab_proga_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab_proga_2 main.cpp
        main.h
        Delete.cpp
        Delete.h
        AddToSet.cpp
        AddToSet.h
        CheckIfIn.cpp
        CheckIfIn.h
        IntersectionOfTwo.cpp
        IntersectionOfTwo.h
        UnionOfTwo.cpp
        UnionOfTwo.h
        App.cpp
        App.h
)
